--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -29,5 +29,5 @@ jobs:
         aws_key_id: ${{ secrets.AWS_ACCESS_KEY }}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
         aws_bucket: ${{ secrets.AWS_BUCKET_NAME}}
-        source_dir: components/
-        destination_dir: ${{ steps.extract_branch.outputs.branch }}/components/
+        source_dir: templates/
+        destination_dir: ${{ steps.extract_branch.outputs.branch }}/templates/
