--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -70,6 +70,9 @@ Parameters:
     Type: String
 
 Metadata:
+  QuickStartDocumentation:
+    EntrypointName: "Launch superwerker - the open-source solution to automate the setup of an AWS Cloud environment with prescriptive best practices"
+    Order: "1"
   AWS::CloudFormation::Interface:
     ParameterGroups:
     - Label:
