--- a/templates/backup.yaml
+++ b/templates/backup.yaml
@@ -1062,3 +1062,6 @@ Resources:
             return [p['Id'] for p in
                     o.list_policies_for_target(TargetId=root_id(), Filter='BACKUP_POLICY')['Policies'] if
                     p['Id'] == policy_id]
+
+Metadata:
+  SuperwerkerVersion: 0.0.0-DEVELOPMENT
