--- a/templates/budget.yaml
+++ b/templates/budget.yaml
@@ -163,3 +163,6 @@ Resources:
           Subscribers:
             - SubscriptionType: SNS
               Address: !Ref BudgetNotification
+
+Metadata:
+  SuperwerkerVersion: 0.0.0-DEVELOPMENT
