--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -70,6 +70,7 @@ Parameters:
     Type: String
 
 Metadata:
+  SuperwerkerVersion: 0.0.0-DEVELOPMENT
   QuickStartDocumentation:
     EntrypointName: "Launch superwerker - the open-source solution to automate the setup of an AWS Cloud environment with prescriptive best practices"
     Order: "1"
