feat: pre-populate template url prefix
so it can be replaced with a meaningful value by the release process

--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -68,6 +68,7 @@ Parameters:
     Type: String
   TemplateUrlPrefix:
     Type: String
+    Default: https://superwerker-deployment.s3.amazonaws.com/0.0.0-DEVELOPMENT
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
