--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,16 @@
 {
-  "branches": ["main", "next"]
+  "branches": ["main", "next"],
+  "plugins": [
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "writerOpts": {
+          "mainTemplate": "{{> header}}\n\n- [View template](https://superwerker-deployment.s3.amazonaws.com/{{version}}/templates/superwerker.template.yaml)\n- [Quick install](https://console.aws.amazon.com/cloudformation/home#/stacks/quickcreate?stackName=superwerker&templateURL=https://superwerker-deployment.s3.amazonaws.com/{{version}}/templates/superwerker.template.yaml)\n\n{{#each commitGroups}}\n{{#each commits}}\n{{> commit root=@root}}\n{{/each}}\n{{/each}}\n\n{{> footer}}\n"
+        }
+      }
+    ],
+    [
+      "@semantic-release/github"
+    ]
+  ]
 }
