fix: Use current awscli version and boto3
https://github.com/boto/boto3/issues/2596

--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -14,7 +14,10 @@ phases:
   build:
     commands:
       # vend fresh account/org
+      - pip3 install -r tests/requirements.txt
+      - pip3 install awscli --upgrade
       - curl --version
+      - aws --version
       - ovm_result=$(curl --fail --retry 10 -s ${ORGANIZATIONS_VENDING_MACHINE_ENDPOINT})
       - aws_account_id=$(echo $ovm_result | jq -r .account_id)
       - aws_cross_account_role_arn=$(echo $ovm_result | jq -r .cross_account_role)
@@ -37,7 +40,6 @@ phases:
 
       - sleep 300 # give superwerker components some time to settle, e.g. SecurityHub member adding takes some minutes after account factory fixture has been rolled out
       - cd tests
-      - pip3 install -r requirements.txt
       - rm -rf ~/.aws/cli/cache # run tests with fresh credentials
       - AWS_REGION=${SUPERWERKER_REGION} AWS_DEFAULT_REGION=${SUPERWERKER_REGION} AWS_PROFILE=test_account ACCOUNT_FACTORY_ACCOUNT_ID=$(aws --profile test_account --region ${SUPERWERKER_REGION} cloudformation describe-stacks --stack-name superwerker-pipeline-account-factory-fixture --query "Stacks[0].Outputs[?OutputKey=='AccountId'].OutputValue" --output text) python3 -munittest rootemails.py backup.py tests.py
 
