chore: include notification stack in superwerk main stack

--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -310,6 +310,11 @@ Resources:
           - true
           - false
 
+  Notifications:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub ${TemplateUrlPrefix}/templates/notifications.yaml
+
 Outputs:
 
   RootMailDelegationTarget:
