--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docs/boilerplate"]
 	path = docs/boilerplate
-	url = git@github.com:aws-quickstart/quickstart-documentation-base-common.git
+	url = https://github.com/aws-quickstart/quickstart-documentation-base-common.git
