fix: S3 Prefix needs to end with /

--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -85,7 +85,7 @@ Resources:
                     },
                     {
                       "name": "TEMPLATE_PREFIX",
-                      "value": "#{source.BranchName}"
+                      "value": "#{source.BranchName}/"
                     }
                   ]
                 BatchEnabled: true
