--- a/templates/control-tower.yaml
+++ b/templates/control-tower.yaml
@@ -116,18 +116,25 @@ Resources:
             if (landingZoneState == 'new') {
               await synthetics.executeStep('createLandingZone', async function () {
                 await page.click("#awsui-input-0")
+                await page.waitFor(3000)
                 await page.click("#awsui-input-1")
+                await page.waitFor(3000)
                 await page.click("#awsui-input-2")
+                await page.waitFor(3000)
                 await page.type("#awsui-input-0", "${LogArchiveAWSAccountEmail}")
+                await page.waitFor(3000)
                 await page.type("#awsui-input-1", "${AuditAWSAccountEmail}")
+                await page.waitFor(3000)
                 await page.click("#awsui-checkbox-0")
                 await page.waitFor(10000); // wait for AWS UI to settle, then click
                 await page.click("#save-button > button");
+                await page.waitFor(10000)
                 await page.waitForNavigation({waitUntil: ['domcontentloaded']});
               });
             } else {
                 await synthetics.executeStep('updateLandingZone', async function () {
                   await page.click("#save-button > button")
+                  await page.waitFor(10000)
                   await page.waitForNavigation({waitUntil: ['domcontentloaded']});
                 });
             }
