--- a/templates/living-documentation.yaml
+++ b/templates/living-documentation.yaml
@@ -66,20 +66,38 @@ Resources:
 
           if rootmail_ready_alarm_state == 'OK':
             dns_delegation_text = """
-        ## ✅ Setup DNS Delegation to your chosen domain `{domain}`
+        #### 🏠 {domain}
+        #### ✅ DNS configuration is set up correctly. 
+        
+        &nbsp;
+
+        ### Next Steps 
+
+        * [Managing Users and Access Through AWS Single Sign-On](https://docs.aws.amazon.com/controltower/latest/userguide/sso.html)
+        * [Monitoring Events with CloudTrail](https://docs.aws.amazon.com/controltower/latest/userguide/cloudtrail.html)
+        * [Guardrails in AWS Control Tower](https://docs.aws.amazon.com/controltower/latest/userguide/guardrails.html)
+
         """.format(
           domain=os.environ['SUPERWERKER_DOMAIN'],
         )
           else:
             if '/superwerker/domain_name_servers' in superwerker_config:
               dns_delegation_text = """
-        ## ❌ Setup DNS Delegation to your chosen domain `{domain}`
+        #### 🏠 {domain}
+        #### ❌ DNS configuration needed. 
 
-        Please create the following NS records for `{domain}`:
-        - `{ns[0]}`
-        - `{ns[1]}`
-        - `{ns[2]}`
-        - `{ns[3]}`
+        &nbsp;
+
+        ### Next Steps 
+
+        Please create the following NS records for your domain:
+
+        ```
+        `{ns[0]}`
+        `{ns[1]}`
+        `{ns[2]}`
+        `{ns[3]}`
+        ```
         """.format(
           domain=os.environ['SUPERWERKER_DOMAIN'],
           ns=superwerker_config['/superwerker/domain_name_servers'].split(','),
@@ -89,11 +107,16 @@ Resources:
 
           markdown = """
 
-          # Welcome to superwerker
+          # [superwerker](https://github.com/superwerker/superwerker)
+          &nbsp;
 
           {dns_delegation}
 
+          &nbsp;
+
+          ```
           Updated at {current_time} (use browser reload to refresh)
+          ```
 
           """.format(
             dns_delegation=dns_delegation_text,
