fix: update url reference to nested stack

--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -314,7 +314,11 @@ Resources:
   Notifications:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub ${TemplateUrlPrefix}/templates/notifications.yaml
+      TemplateURL:
+        Fn::Sub:
+          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/notifications.yaml'
+          - S3Region: !If [UsingDefaultBucket, !Sub '${AWS::Region}', !Ref QSS3BucketRegion]
+            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         NotificationsMail: !Ref NotificationsMail
 
