feat: let notifications stack depend on rootmail

--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -316,6 +316,7 @@ Resources:
   Notifications:
     Condition: IncludeNotifications
     Type: AWS::CloudFormation::Stack
+    DependsOn: RootMail
     Properties:
       TemplateURL:
         Fn::Sub:
