chore: add regexp for notifications mail address

--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -70,6 +70,7 @@ Parameters:
     Type: String
     Description: Mail address used for notifications
     Default: ""
+    AllowedPattern: "(^$|^.*@.*\\..*$)"
   IncludeBudget:
     AllowedValues:
       - 'Yes'
