feat: show current version in dashboard

--- a/templates/living-documentation.yaml
+++ b/templates/living-documentation.yaml
@@ -9,19 +9,6 @@ Parameters:
     Description: Name of the parent superwerker CloudFormation stack
 
 Resources:
-  DashboardVersionFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: index.handler
-      Runtime: python3.7
-      Timeout: 60
-      Environment:
-        Variables:
-          SUPERWERKER_STACK_NAME: !Ref SuperwerkerStackName
-      InlineCode: |
-        def handler(event, context):
-          return "Done"
-
   DashboardGeneratorFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -51,6 +38,9 @@ Resources:
             - Effect: Allow
               Action: cloudwatch:DescribeAlarms
               Resource: '*'
+            - Effect: Allow
+              Action: cloudformation:GetTemplateSummary
+              Resource: !Sub arn:{AWS::Partition}:cloudformation:{AWS::Region}:{AWS::AccountId}:stack/{SuperwerkerStackName}/*
       Environment:
         Variables:
           SUPERWERKER_DOMAIN: !Ref SuperwerkerDomain
@@ -59,11 +49,19 @@ Resources:
         import boto3
         import json
         import os
+        import urllib.request
+        import urllib.parse
+
         from datetime import datetime
 
         cw = boto3.client("cloudwatch")
         ssm = boto3.client("ssm")
 
+        def get_latest_version():
+          response = urllib.request.urlopen('https://api.github.com/repos/superwerker/superwerker/releases/latest').read()
+          data = json.loads(response.decode('utf-8'))
+          
+          return data['name']
 
         def get_current_version():
           response = cfn.get_template_summary(
@@ -74,6 +72,14 @@ Resources:
           
           return metadata['SuperwerkerVersion']
 
+        def get_version_label():
+          current = get_current_version()
+          release = get_latest_version()
+          
+          if current == release:
+              return "🛠 Version: {version} (No updates available)".format(version=current)
+          else:
+              return "🛠 Version: {version} ([{release} available on GitHub](https://github.com/superwerker/superwerker))".format(version=current, release=release)
 
         def handler(event, context):
 
@@ -96,17 +102,17 @@ Resources:
             dns_delegation_text = """
         #### 🏠 {domain}
         #### ✅ DNS configuration is set up correctly. 
-        #### 🛠 Version: {version}
+        #### {version}
         """.format(
           domain=os.environ['SUPERWERKER_DOMAIN'],
-          version=get_current_version(),
+          version=get_version_label(),
         )
           else:
             if '/superwerker/domain_name_servers' in superwerker_config:
               dns_delegation_text = """
         #### 🏠 {domain}
         #### ❌ DNS configuration needed. 
-        #### 🛠 Version: {version}
+        #### {version}
 
         &nbsp;
 
@@ -123,7 +129,7 @@ Resources:
         """.format(
           domain=os.environ['SUPERWERKER_DOMAIN'],
           ns=superwerker_config['/superwerker/domain_name_servers'].split(','),
-          version=get_current_version(),
+          version=get_version_label(),
         )
             else:
               dns_delegation_text = '### DNS Setup pending'
