feat: add scheduled event to dashboard generator function

--- a/templates/living-documentation.yaml
+++ b/templates/living-documentation.yaml
@@ -13,6 +13,10 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Events:
+        DailyGeneration:
+          Type: Schedule
+          Properties:
+            Schedule: rate(1 day)
         EmailHealth:
           Type: CloudWatchEvent
           Properties:
