WIP: try SAM package for getting rid of inline lambdas

--- a/templates/superwerker.yaml
+++ b/templates/superwerker.yaml
@@ -268,11 +268,7 @@ Resources:
   LivingDocumentation:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL:
-        Fn::Sub:
-          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/living-documentation.yaml'
-          - S3Region: !If [UsingDefaultBucket, !Sub '${AWS::Region}', !Ref QSS3BucketRegion]
-            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      TemplateURL: ./living-documentation.yaml
       Parameters:
         SuperwerkerDomain: !Sub '${Subdomain}.${Domain}'
 
