--- a/templates/living-documentation.yaml
+++ b/templates/living-documentation.yaml
@@ -4,11 +4,15 @@ Transform: AWS::Serverless-2016-10-31
 Parameters:
   SuperwerkerDomain:
     Type: String
+  AssetsS3Bucket:
+    Type: String
 
 Resources:
 
   DashboardGeneratorFunction:
     Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
     Properties:
       Events:
         EmailHealth:
@@ -23,7 +27,7 @@ Resources:
                 alarmName:
                   - superwerker-RootMailReady
 
-      CodeUri: living-documentation/
+      CodeUri: !Sub s3://superwerker-releases-${AWS::Region}/sam-package-for-lambdas/living-documentation/dashboard.zip
       Handler: dashboard.handler
       Policies:
         - SSMParameterReadPolicy:
@@ -39,7 +43,7 @@ Resources:
       Environment:
         Variables:
           SUPERWERKER_DOMAIN: !Ref SuperwerkerDomain
-      Runtime: python3.7
+      Runtime: python3.8
       Timeout: 60
 
 Metadata:
